--- a/bullet1after.html
+++ b/bullet1after.html
@@ -5,7 +5,6 @@
 <head>
     <title>Todo App</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -15,7 +14,7 @@
     <input type="text" id="new-todo-box" placeholder="New Task"/>
     <button id="disabled-button">+</button>
     <p></p>
-    <input type="checkbox" id="first-task"> Buy new John Grisham book </input>
+    <input type="checkbox" id="first-task"/> <input type="text" id="first-task-text" value="Buy new John Grisham book"/>
 </form>
 <div id="menu"></div>
 </body>
