--- a/bullet3after.html
+++ b/bullet3after.html
@@ -14,9 +14,9 @@
     <input type="text" id="new-todo-box" placeholder="New Task"/>
     <button id="disabled-button">+</button>
     <p></p>
-    <input type="checkbox" id="first-task"> Buy new John Grisham book </input> </br>
-    <input type="checkbox" id="second-task"> Eat Lunch </input> </br>
-    <input type="checkbox" id="third-task" checked> Call Mom </input>
+    <input type="checkbox" id="first-task"/> <input type="text" id="first-task-text" value="Buy new John Grisham book"/> </br> 
+  <input type="checkbox" id="second-task"/> <input type="text" id="second-task-text" value="Eat Lunch"/> </br>
+  <input type="checkbox" id="third-task" checked/> <input type="text" id="third-task-text" value="Call Mom"/>
 </form>
 <div id="menu"></div>
 </body>
