--- a/bullet5before copy 2.html
+++ b/bullet5before copy 2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <title>Todo App</title>
@@ -13,9 +13,13 @@
 <form>
   <input type="text" id="new-todo-box" placeholder="New Task"/>
   <button id="disabled-button">+</button>
+
+  <button class="general-button">View Incomplete</button>
   <p></p>
   <input type="checkbox" id="first-task"/> <input type="text" id="first-task-text" value="Buy new John Grisham book"/> </br> 
-  <input type="checkbox" id="second-task"/> <input type="text" id="second-task-text" value="Eat Lunch"/>
+  <input type="checkbox" id="second-task" checked/> <input type="text" id="second-task-text" value="Eat Lunch"/> </br>
+  <input type="checkbox" id="third-task"/> <input type="text" id="third-task-text" value="Call Mom"/> </br>
+  <input type="checkbox" id="fourth-task" checked/> <input type="text" id="fourthtask-text" value="Text John"/>
 </form>
 <div id="menu"></div>
 </body>
